# Rocket.Chat.py.SDK

./: .gitignore  README.md  docker-compose.yml  easybot.py  requirements.txt  rocketchat.py  rocketchatbot.py  rocketchatclient.py  run.py  setup.cfg  setup.py
examples/: bot.py
rocket.chat_py_sdk/: __init__.py
src/rocketchat_py_sdk/: __init__.py  driver.py
