[metadata]
name = rocketchat_py_sdk
version = 0.0.5
description = A easy way to connect and interact with Rocket.Chat
long_description = file: README.md
long_description_content_type = text/markdown
author = Arthur Temporim
author_email = arthurrtl@gmail.com
url = https://github.com/RocketChat/Rocket.Chat.py.SDK
keywords = 
    python
    Rocket.Chat
    driver
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires = 
    python-ddp == 0.1.5
    ddpclient == 2.0.1
